k8s/kafka-cli-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-cli
  namespace: istio-kafka-client-sample
  labels:
    app: kafka-cli
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-cli
  template:
    metadata:
      labels:
        app: kafka-cli
      annotations:
        # Add these annotations to mount the certificates from the secrets in the sidecar.
        # `secretName` must match `secretName` on the namespace's Certificate.
        sidecar.istio.io/userVolume: |-
          [
            {"name": "certs", "secret": {"secretName": "client-certs"}},
            {"name": "cacert", "secret": {"secretName": "ca-cert"}}
          ]
        # Paths in volume mounts must match those in the DestinationRule.
        sidecar.istio.io/userVolumeMount: |-
          [
            {"name": "certs", "mountPath":"/etc/certs", "readonly":true}, 
            {"name": "cacert", "mountPath":"/etc/cacert", "readonly":true}
          ]

    spec:
      containers:
      - name: kafka-cli
#        image: confluentinc/cp-kafka:7.3.1  # for linux
        image: confluentinc/cp-kafka:7.3.1.arm64  # for m1 mac
        imagePullPolicy: IfNotPresent
        # overwrite the command to avoid the following error:
        #   KAFKA_ZOOKEEPER_CONNECT is require.
        #   Command [/usr/local/bin/dub ensure KAFKA_ZOOKEEPER_CONNECT] FAILED
        command:
          - "/bin/bash"
          - "-c"
          - "trap : TERM INT; sleep infinity & wait"
