k8s/istio-resources-for-app.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-kafka-client-sample
  labels:
    name: istio-kafka-client-sample
    istio-injection: enabled
---
# DestinationRule telling Envoy to originate an mTLS connection to Kafka, using custom certificates.
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kafka-mtls
  namespace: istio-kafka-client-sample
spec:
  host: my-cluster-kafka-bootstrap.kafka.svc
  exportTo:
  - "."
  trafficPolicy:
    tls:
      mode: MUTUAL
      clientCertificate: /etc/certs/tls.crt
      privateKey: /etc/certs/tls.key
      caCertificates: /etc/cacert/ca-cert.pem
---
#apiVersion: networking.istio.io/v1alpha3
#kind: ServiceEntry
#metadata:
#  name: kafka-mtls
#  namespace: istio-kafka-client-sample
#spec:
#  hosts:
#  - my-cluster-kafka-bootstrap.kafka.svc
#  location: MESH_INTERNAL
#  ports:
#    - number: 9093
#      name: kafka-tls
#      protocol: TCP
#  resolution: NONE
#  workloadSelector:
#    labels:
#      strimzi.io/cluster: my-cluster-kafka
#  exportTo:
#    - .
